cmake_minimum_required(VERSION 3.15)

project(advent_of_code_2019)

include(${CMAKE_CURRENT_BINARY_DIR}/conanbuildinfo.cmake)
conan_basic_setup(TARGETS)

file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR})

add_subdirectory(src/day_01)
add_subdirectory(src/day_02)
add_subdirectory(src/day_03)
add_subdirectory(src/day_04)
add_subdirectory(src/day_05)
add_subdirectory(src/day_06)
add_subdirectory(src/day_07)
add_subdirectory(src/day_08)
add_subdirectory(src/day_09)
add_subdirectory(src/day_10)
add_subdirectory(src/day_11)
add_subdirectory(src/day_12)
add_subdirectory(src/day_13)
add_subdirectory(src/day_14)
add_subdirectory(src/day_15)
add_subdirectory(src/day_16)
add_subdirectory(src/day_17)
add_subdirectory(src/day_18)
add_subdirectory(src/day_19)
add_subdirectory(src/day_20)
add_subdirectory(src/day_21)
add_subdirectory(src/day_22)
add_subdirectory(src/day_23)
add_subdirectory(src/day_24)
add_subdirectory(src/day_25)
